tests/baselines/reference/computedPropertyNames39_ES6.errors.txt
computedPropertyNames39_ES6.ts(8,9): error TS2411: Property '[1 << 6]' of type 'Foo' is not assignable to 'number' index type 'Foo2'.


==== computedPropertyNames39_ES6.ts (1 errors) ====
    class Foo { x }
    class Foo2 { x; y }
    
    class C {
        [s: number]: Foo2;
    
        // Computed properties
        get [1 << 6]() { return new Foo }
            ~~~~~~~~
!!! error TS2411: Property '[1 << 6]' of type 'Foo' is not assignable to 'number' index type 'Foo2'.
        set [1 << 6](p: Foo2) { }
    }